apps/keycloak/deploy/base/resources/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice-keycloak
spec:
  hosts:
    - sso.infra.home.arpa
  gateways:
    - gateway-keycloak
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak-service.keycloak.svc.cluster.local
            port:
              number: 8080
